--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@
     background-color: rgb(240, 239, 238);
     width: 300px;
     height: 375px;
-    padding: 0px 15px;
+    padding: 0px 25px;
 }
 
 body {
-    background-color: blanchedalmond;
+    background-color: rgb(245, 243, 241);
 }
 
 .p {
@@ -36,16 +36,20 @@ body {
 
 }
 
+.att{
+    text-align: center;
+}
+
 .mestre {
     align-items: center;
 
 }
 
 .super{
-    background-color: rgb(63, 120, 170);
-    width: 1000px;
-    height: 500px;
-    margin: 60px;
+    background-color:hsl(30, 38%, 92%);
+    width: 800px;
+    height: 550px;
+    margin: 100px 500px;
     align-items: center;
     border-radius: 10px;
 }
@@ -69,15 +73,11 @@ body {
 
 }
 
-.preco .preco2{
-    line-height: 16px;
-
-}
 
 .button {
     border-radius: 30px;
-    height: 50px;
-    width: 250px;
+    height: 40px;
+    width: 240px;
     margin-left: 30px;
     margin-top: 10px;
     background-color: green;
